# OAuth2-utils

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  REAMDE.md  cobertura.xml  justfile
.github/workflows/: ci.yaml  manual-release.yaml  test.yaml
hooks/: pre-push
src/: base_64.rs  consts.rs  gen.rs  lib.rs  main.rs  utils.rs  w.txt
src/consts/: mod.rs
src/errors/: mod.rs
src/pkce/: error.rs  gen.rs  mod.rs
src/urlsafe/: b64.rs  mod.rs  tokens.rs
