[package]
name = "oauth2_utils"
version = "1.0.2"
authors = ["AshGw ashrefgw@proton.me"]
edition = "2021"
description = "crate that provides utility functions for working with OAuth2"
repository = "https://github.com/ashgw/oauth2_utils"
license = "MIT"

[dependencies]
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.21.5"

[lib]
name = "oauth2_utils"
path = "src/lib.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3